<resources>
    <string name="app_name">Notes App</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="archived_notes">Deleted Notes</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="new_user_register">New User? Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_an_account">Login into an existing Account?</string>
    <string name="don_t_worry_we_are_here">Don\'t Worry We Are Here</string>
    <string name="recover_password">Recover Password</string>
    <string name="go_back_to_login_screen">Go Back To Login Screen</string>
    <string name="already_have_an_account_register">Already Have An Account? Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>


</resources>