<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/imageUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputEmail"
        style="@style/text_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/inputPassword"
        style="@style/text_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


    <LinearLayout
        android:id="@+id/googleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/round_border"
        android:elevation="@dimen/_12sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp"
        app:layout_constraintEnd_toStartOf="@id/otpLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword">

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_weight="1"
            app:srcCompat="@drawable/google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:paddingStart="8dp"
            android:text="@string/sign_in_with_google"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/otpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_border"
        android:elevation="@dimen/_12sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/googleLayout"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword">

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_phone"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:paddingStart="8dp"
            android:text="OTP Verification"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/new_user_register"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
